Logo alignments fixed

--- a/static/css/bookpage.css
+++ b/static/css/bookpage.css
@@ -345,8 +345,9 @@ tr.option {color:white;}
 
 .res_logo { 
 	width:25em; 
+	max-height: 30px;
 	left: 10px; 
-	top: 5px; 
+	top: 15px; 
 	position: absolute; 
 }
 	
@@ -396,8 +397,8 @@ tr.option {color:white;}
 .ncbi_logo{
 	position:absolute; 
 	right: 30px;
-	top: 10px;
-	max-height: 24px;
+	top: 25px;	
+	max-height: 30px;
 }
 
 .nvgtn {
